@@ -1,6 +1,6 @@
 // TortoiseSVN - a Windows shell extension for easy version control
 
-// Copyright (C) 2007-2008 - TortoiseSVN
+// Copyright (C) 2007-2009 - TortoiseSVN
 
 // This program is free software; you can redistribute it and/or
 // modify it under the terms of the GNU General Public License
@@ -36,6 +36,8 @@ bool RevertCommand::Execute()
 		progDlg.SetCommand(CSVNProgressDlg::SVNProgress_Revert);
 		if (parser.HasVal(_T("closeonend")))
 			progDlg.SetAutoClose(parser.GetLongVal(_T("closeonend")));
+		if (parser.HasKey(_T("closeforlocal")))
+			progDlg.SetAutoCloseLocal(TRUE);
 		progDlg.SetOptions(dlg.m_bRecursive ? ProgOptRecursive : ProgOptNonRecursive);
 		progDlg.SetPathList(dlg.m_pathList);
 		progDlg.SetItemCount(dlg.m_selectedPathList.GetCount());
