@@ -1,4 +1,5 @@
 - NEW: new command line params for the log dialog to set the filter. (Stefan)
+- NEW: new autoclose setting for local operations only. (Stefan)
 
 Version 1.6.1
 - CHG: The history dialog is now 'attached' to the commit dialog. (Stefan)
